syntax = "proto3";

package hi;

option go_package = "grpc-go-unary/proto";

service HiService {
  rpc SayHi (HiRequest) returns (HiResponse);
}

message HiRequest {
  string name = 1;
  int32 age = 2;
}

message HiResponse {
  string message = 1;
}
